# recovrr

./: .gitignore  README.md  SETUP_GUIDE.md  ebay_response_debug.html  env.example  pyproject.toml  requirements.txt  test_ebay_debug.py  test_manual.py  test_vado_search.py
migrations/: 001_create_tables.sql  002_rls_policies.sql  003_dashboard_functions.sql
recovrr/: __init__.py
recovrr/agents/: __init__.py  matcher_agent.py
recovrr/config/: __init__.py  settings.py
recovrr/database/: __init__.py  database.py  models.py  supabase.py  supabase_db.py
recovrr/models/: __init__.py  analysis_result.py  listing.py  search_profile.py
recovrr/notifications/: __init__.py  base_notifier.py  email_notifier.py  notification_service.py  sms_notifier.py
recovrr/scheduler/: __init__.py  monitoring_job.py  scheduler_service.py
recovrr/scrapers/: __init__.py  base_scraper.py  ebay_scraper.py  facebook_scraper.py  scraper_factory.py
recovrr/utils/: __init__.py
scripts/: setup_supabase.py
tests/: test_simple_listing.py  test_vado_search.py
